# invest.ai

./: .env.example  .gitignore  404.html  AGENTS.md  CNAME  Dockerfile  README.md  agent.py  all_weather_portfolio.py  app.py  backtest.csv  backtest.py  build.sh  csi_closeweight.py  etf.py  guide.py  guide_us.py  hstech.py  index.html  macro.py  main.py  make_trade_guides.py  make_trade_records.py  mkdocs.yml  monitor.py  nasdaq.py  points.py  portfolio.py  pyproject.toml  requirements.txt  selected.csv  sitemap.xml  trading.py  update_names.py  us.py  watch.py  webui.py
.github/workflows/: ci.yml
.streamlit/: config.prod.toml  config.toml
docs/: disclaimer.md  index.md
docs/points/: latest.csv
docs/portfolio/: etf_10_deepseek.md  etf_10_moonshot.md  etf_10_zhipuai.md  portfolio_10.md  portfolio_cn_etf_10.md  portfolio_cn_etf_10_deepseek.md  portfolio_cn_etf_10_glm-4-plus.md  portfolio_cn_etf_10_glm.md  portfolio_cn_etf_10_glm4.md  portfolio_cn_etf_10_moonshot.md  portfolio_cn_etf_10_ollama.md  portfolio_cn_etf_10_zhipuai.md  portfolio_cn_etf_5_deepseek.md  portfolio_cn_etf_5_glm4.md  portfolio_cn_etf_5_moonshot.md
docs/投资组合/: A股ETF全天候投资组合_deepseek.md  A股ETF全天候投资组合_moonshot.md  (+20 more)
guide/: 20241219.csv  20250103.csv  20250125.csv  latest.csv
input/: matthew_4.csv  pmi_china.xls  portfolio.csv  selected.csv
libs/: backtest.py  guide.py  guide_ai.py  portfolio.py
points/: latest.csv
search/: search_index.json
src/: agents.py  data.py  indicators.py  llm.py  pages.py  strategy.py  util.py
test/: test_tech_analysis.py  test_util.py
utils/: pivot_points.py
(+4081 files in other folders)
