[project]
name = "invest-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "agentforge>=0.6.4",
    "akshare>=1.18.9",
    "colorama>=0.4.6",
    "fire>=0.7.1",
    "futu-api>=9.6.5608",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langsmith>=0.6.2",
    "mkdocs>=1.6.1",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-material>=9.7.1",
    "mkdocs-material-extensions>=1.3.1",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "streamlit>=1.52.2",
    "streamlit-authenticator>=0.4.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "wcwidth>=0.2.14",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
